kuber/recommend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/service/recommend/?(.*)
        pathType: Prefix
        backend:
          service:
            name: recommend
            port:
              number: 8081
